--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="https://github.com/cooncudee/Frontend-Mentor-Single-Price-Grid-Component/blob/master/Style.css">
+  <link rel=“stylesheet” type=“text/css” href=“Style.css”>
   
   <title>Frontend Mentor | Single Price Grid Component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -21,9 +21,10 @@
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
+  
   </style>
 </head>
-
+<link rel="stylesheet" href="https://github.com/cooncudee/Frontend-Mentor-Single-Price-Grid-Component/blob/master/Style.css">
 <body>
   <div class="container">
     <div class="box1">
