--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"/>
   
-  <link rel=“stylesheet” type=“text/css” href=“style.css”>
+  <link rel=“stylesheet” type=“text/css” href=“style.css”/>
   
   <title>Frontend Mentor | Single Price Grid Component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -24,7 +24,7 @@
   
   </style>
 </head>
-<link rel="stylesheet" href="https://github.com/cooncudee/Frontend-Mentor-Single-Price-Grid-Component/blob/master/Style.css">
+
 <body>
   <div class="container">
     <div class="box1">
