--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"/>
   
-  <link rel=“stylesheet” type=“text/css” href=“./style.css”/>
+  <link rel=“stylesheet” type=“text/css” href=“style.css”/>
   
   <title>Frontend Mentor | Single Price Grid Component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
